--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,8 @@ jobs:
     env:
       AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
       POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
-      BLOB_READ_WRITE_TOKEN: ${{ secrets.BLOB_READ_WRITE_TOKEN }}
+      PLAYWRIGHT: true
+      PLAYWRIGHT_TEST_BASE_URL: ${{ steps.deploy.outputs.url }}
 
     steps:
       - uses: actions/checkout@v4
